Fixed the Alignment of Image and text of home page

--- a/style/style.css
+++ b/style/style.css
@@ -360,17 +360,19 @@ body{
 
 
 /* Navigation Starts */
+.navtrans{
+  margin-top: 1.5em;
+}
 
-.logo-img {
-  position: absolute;
-  width: 86px;
-  height: 95px;
+.logo img{ 
   left: 100px;
-  top: 43px;
-
-  /* background: url(CodeIN.png); */
+ 
+  height: 100px;
+  width: 100px;
+  
 
 }
+
 
 .logo-text {
   position: absolute;
@@ -487,14 +489,15 @@ body{
   background: var(--white) url("../media/Images/Background1.jpg") no-repeat;
   background-size: cover;
 }
-.hero-left {
+.hero-left img {
   position: relative;
   z-index: 100;
   top: 4.9rem;
-  background: url("../media/Images/hero.png") no-repeat;
-  background-size: 100%;
-  height: 550px;
-  /* width: 350px; */
+  /* background: url("../media/Images/hero.png") no-repeat; */
+  /* background-size: 100%; */
+
+  height: 50rem;
+  width: 50rem;
 }
  .hero-right {
   position: absolute;
@@ -507,6 +510,7 @@ body{
   font-weight: 600;
   font-size: 16px;
   line-height: 38px;
+  margin-right: 10%;
   /* or 116% */
 
   color: #f5f0f0;
@@ -608,7 +612,7 @@ body{
   height: 57px;
   left: 240px;
   top: 250px;
-  background: var(--yellow);
+  background: #ffe675;
   border-radius: 6px;
   font-family: Work Sans;
   font-style: normal;
